syntax = "proto2";

message ConnectionInitiationMessage {
    enum Type {
        QUERY = 0;
        REQUEST = 1;
        CONNECT = 2;
        TERMINATE = 3;
    };

    required Type type = 1;
}

message Parameter {
    required string key = 1;
    optional string value = 2;
}

message ServiceDescription {
    required string name = 1;
    required string category = 2;
    required string type = 3;
    required string version = 4;
    required string location = 5;
    required string port = 6;
    repeated Parameter parameters = 7;
}

message CapabilityMessage {
    required uint32 objectid = 1;
    required uint32 rights = 2;
    required bytes secret = 3;
}

message SessionRequestMessage {
    repeated Parameter parameters = 1;
    required bytes invoker = 2;
}

message SessionMessage {
    required CapabilityMessage invoker_cap = 1;
    required CapabilityMessage requester_cap = 2;
}

message SessionInitiationMessage {
    required CapabilityMessage capability = 1;
}

message SessionTerminationMessage {
    required CapabilityMessage capability = 1;
}

message SessionResult {
    required uint32 result = 1;
}
